# mrezq-pynexus

./: .env.example  .pre-commit-config.yaml  .ruff.toml  main.py  mypy.ini  pyproject.toml
cli/: pyproject.toml
cli/src/pynexus_cli/: __init__.py
libs/shared/: pyproject.toml
libs/shared/src/shared/: config.py
libs/shared/src/shared/domain/: permissions.py  repositories.py  services.py  value_objects.py
libs/shared/src/shared/domain/entities/: document.py  risk_assessment.py  user.py
libs/shared/src/shared/domains/: enums.py  value_objects.py
libs/shared/src/shared/utils/: datetime_utils.py
services/admin/: pyproject.toml
services/ai/: pyproject.toml
services/api/: pyproject.toml
services/ml/: pyproject.toml
services/pipeline/: pyproject.toml
services/worker/: pyproject.toml
