[project]
name = "pynexus-workspace"
version = "0.1.0"
description = "Demo application for PyNexus workspace"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/shared",
    "services/api",
    "services/admin",
    "services/worker",
    "services/pipeline",
    "services/ml",
    "services/ai",
    "cli",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", "__pycache__", "alembic/versions"]

[tool.ruff.lint]
select = ["E","F","I","N","UP","B","A","C4","PT","S"]
ignore = ["S101","S104","A003"]

[tool.ruff.lint.isort]
known-first-party = ["shared"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["alembic/", ".venv/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/api/tests"]