[project]
name = "pynexus-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MohamedRezq", email = "mrezq.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "shared",
    "typer[all]>=0.26.7",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { workspace = true }

[project.scripts]
pynexus = "cli.main:app"