[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MohamedRezq", email = "mrezq.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "boto3>=1.43.34",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "fastapi-cache2[redis]>=0.1.8",
    "httpx>=0.28.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "orjson>=3.11.9",
    "prometheus-client>=0.25.0",
    "python-multipart>=0.0.32",
    "sentry-sdk[fastapi]>=2.63.0",
    "shared",
    "slowapi>=0.1.10",
    "strawberry-graphql[fastapi]>=0.318.1",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { workspace = true }

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.23.0",
    "freezegun>=1.5.5",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "respx>=0.23.1",
]
