[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MohamedRezq", email = "mrezq.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "imbalanced-learn>=0.14.2",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "mlflow>=1.27.0",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "shap>=0.52.0",
    "shared",
    "uvicorn[standard]>=0.49.0",
    "xgboost>=3.3.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { workspace = true }
