[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MohamedRezq", email = "mrezq.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "prefect>=3.7.5",
    "prefect-sqlalchemy>=0.6.1",
    "shared",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { workspace = true }
