[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MohamedRezq", email = "mrezq.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "boto3>=1.43.34",
    "celery[rabbitmq]>=5.6.3",
    "flower>=2.0.1",
    "openpyxl>=3.1.5",
    "polars>=1.41.2",
    "pymupdf>=1.27.2.3",
    "python-magic>=0.4.27",
    "shared",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = { workspace = true }
